src/objects/Processus__c.object
<CustomObject>
    <fields>
        <fullName>copilote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>copilot</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Process (copilot)</relationshipLabel>
        <relationshipName>Process1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dateApplication__c</fullName>
        <label>application date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>finalite__c</fullName>
        <label>finality</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pilote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pilot</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Process</relationshipLabel>
        <relationshipName>Process</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>proprietaire__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ownership structure</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Process</relationshipLabel>
        <relationshipName>Process</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>reference__c</fullName>
        <label>reference</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>version__c</fullName>
        <label>version</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Process</label>
    <nameField>
        <label>Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>